# stock-market-analyser

./: .gitignore  ARCHITECTURE_FLOW.md  main.py  pyproject.toml  readme.md  streamlit_app.py
src/: __init__.py
src/agents/: market_agent.py  news_agent.py  planner.py  technical_agent.py  thesis_agent.py
src/orchestrator/: workflows.py
src/schemas/: analysis.py  planner.py  recommendation.py
src/services/: __init__.py  gemini_service.py  llm_service.py  market_service.py  news_service.py  yfinance_client.py
src/settings/: config.py  settings.py
src/tests/: test_planner_agent.py  test_technical_agent.py
