[project]
name = "stock-market-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "langgraph>=0.6.11",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "ta>=0.11.0",
    "yfinance>=1.2.0",
]
